* added edit button into events detail view * fixed event detail view to comply global CI (buttons alignment in fieldset, right)

--- a/assets/css/event.css
+++ b/assets/css/event.css
@@ -311,6 +311,9 @@ table.eventView {
 	line-height:20px;
 }
 
+button.editEvent .icon {
+	background:url(../img/icons.png) no-repeat 0 -28px;
+}
 
 
 
